learning rate adjusment for each 20 epochs

--- a/training_models.ipynb
+++ b/training_models.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "68e666e7",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,9 @@
     "for J in J_values:\n",
     "    print(f\"\\nTraining UPGANet (J={J})\")\n",
     "    model = UPGANet(N, M, K, omega, I_max=I_max, J=J).to(device)\n",
-    "    optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "    scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=20, gamma=0.5)\n",
+    "\n",
     "\n",
     "    loss_history, mu_history, lambda_history = [], [], []\n",
     "\n",
@@ -265,6 +267,7 @@
     "            lambda_val = model.layers[0].lambda_.item()\n",
     "        mu_history.append(mu_mean)\n",
     "        lambda_history.append(lambda_val)\n",
+    "        scheduler.step()\n",
     "\n",
     "        print(f\"Epoch [{epoch+1}/{num_epochs}] | Loss: {avg_loss:.6f} | μ={mu_mean:.6f}, λ={lambda_val:.6f}\")\n",
     "\n",
