--- a/training_models.ipynb
+++ b/training_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7cd70698",
    "metadata": {},
    "outputs": [],
@@ -103,9 +103,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training config: epochs=100, channels/epoch=1000, SNR=12 dB\n",
       "\n",
-      "Training UPGANet (J=1)\n"
+      "Training UPGANet (J=10)\n",
+      "Epoch [1/30] | Loss: 40.309271 | μ=0.007761, λ=0.010511\n",
+      "Epoch [1/30] | Loss: 40.309271 | μ=0.007761, λ=0.010511\n",
+      "Epoch [2/30] | Loss: 36.204354 | μ=0.007868, λ=0.014461\n",
+      "Epoch [2/30] | Loss: 36.204354 | μ=0.007868, λ=0.014461\n",
+      "Epoch [3/30] | Loss: 34.037720 | μ=0.007868, λ=0.008744\n",
+      "Epoch [3/30] | Loss: 34.037720 | μ=0.007868, λ=0.008744\n",
+      "Epoch [4/30] | Loss: 36.750462 | μ=0.007868, λ=0.005806\n",
+      "Epoch [4/30] | Loss: 36.750462 | μ=0.007868, λ=0.005806\n",
+      "Epoch [5/30] | Loss: 39.254828 | μ=0.007868, λ=0.002535\n",
+      "Epoch [5/30] | Loss: 39.254828 | μ=0.007868, λ=0.002535\n",
+      "Epoch [6/30] | Loss: 31.292411 | μ=0.007868, λ=0.001411\n",
+      "Epoch [6/30] | Loss: 31.292411 | μ=0.007868, λ=0.001411\n",
+      "Epoch [7/30] | Loss: 26.695969 | μ=0.007868, λ=0.000236\n",
+      "Epoch [7/30] | Loss: 26.695969 | μ=0.007868, λ=0.000236\n",
+      "Epoch [8/30] | Loss: 30.743630 | μ=0.007868, λ=0.000688\n",
+      "Epoch [8/30] | Loss: 30.743630 | μ=0.007868, λ=0.000688\n",
+      "Epoch [9/30] | Loss: 29.030488 | μ=0.007868, λ=0.000163\n",
+      "Epoch [9/30] | Loss: 29.030488 | μ=0.007868, λ=0.000163\n",
+      "Epoch [10/30] | Loss: 22.515991 | μ=0.007868, λ=0.005441\n",
+      "Epoch [10/30] | Loss: 22.515991 | μ=0.007868, λ=0.005441\n",
+      "Epoch [11/30] | Loss: 22.464457 | μ=0.007868, λ=0.007890\n",
+      "Epoch [11/30] | Loss: 22.464457 | μ=0.007868, λ=0.007890\n",
+      "Epoch [12/30] | Loss: 23.517419 | μ=0.007868, λ=0.009111\n",
+      "Epoch [12/30] | Loss: 23.517419 | μ=0.007868, λ=0.009111\n",
+      "Epoch [13/30] | Loss: 25.860170 | μ=0.007868, λ=0.008273\n",
+      "Epoch [13/30] | Loss: 25.860170 | μ=0.007868, λ=0.008273\n",
+      "Epoch [14/30] | Loss: 29.965773 | μ=0.007868, λ=0.000124\n",
+      "Epoch [14/30] | Loss: 29.965773 | μ=0.007868, λ=0.000124\n",
+      "Epoch [15/30] | Loss: 24.674201 | μ=0.007868, λ=-0.004862\n",
+      "Epoch [15/30] | Loss: 24.674201 | μ=0.007868, λ=-0.004862\n",
+      "Epoch [16/30] | Loss: 24.606653 | μ=0.007868, λ=0.004578\n",
+      "Epoch [16/30] | Loss: 24.606653 | μ=0.007868, λ=0.004578\n"
      ]
     }
    ],
@@ -115,52 +146,56 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# ==== Config ====\n",
-    "num_epochs = 100\n",
-    "num_channels = 1000\n",
+    "num_epochs = 30\n",
+    "num_channels = 100\n",
     "snr_min, snr_max = 0, 12\n",
     "\n",
     "from lib.dnn import UPGANet, upganet_loss\n",
     "from lib.support_functions_torch import (\n",
     "    generate_channel_torch_batch,\n",
     "    proposed_initialization_torch,\n",
+    "    proposed_initialization_torch_batch\n",
     ")\n",
     "\n",
-    "print(f\"Training config: epochs={num_epochs}, channels/epoch={num_channels}, SNR={snr_max} dB\")\n",
+    "# print(f\"Training config: epochs={num_epochs}, channels/epoch={num_channels}, SNR={snr_max} dB\")\n",
+    "\n",
+    "\n",
+    "snr_db = snr_max\n",
+    "# snr_db = np.random.randint(snr_min, snr_max + 1)\n",
+    "\n",
+    "Psi = compute_psi(snr_db)\n",
+    "Psi = torch.tensor(Psi, dtype=torch.complex64, device=device)\n",
+    "\n",
+    "P_BS = sigma_n2 * 10**(snr_db / 10)\n",
+    "P_BS_t = torch.tensor(P_BS, dtype=torch.float32, device=device)\n",
     "\n",
     "# # ==== Pre-generate channel batch ====\n",
     "# H_batch = generate_channel_batch(N, M, L=20, batch_size=num_channels, device=device)\n",
     "# print(f\"Channel batch shape: {H_batch.shape}\")\n",
     "\n",
     "# ==== Training ====\n",
-    "J_values = [1]\n",
+    "J_values = [10]\n",
     "\n",
     "for J in J_values:\n",
     "    print(f\"\\nTraining UPGANet (J={J})\")\n",
     "    model = UPGANet(N, M, K, omega, I_max=I_max, J=J).to(device)\n",
+    "    # optimizer = optim.Adam(model.parameters(), lr=0.0001) for J= 1\n",
     "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "    scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=20, gamma=0.5)\n",
+    "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, \"min\")\n",
     "\n",
     "\n",
     "    loss_history, mu_history, lambda_history = [], [], []\n",
-    "\n",
+    "    H_batch = generate_channel_torch_batch(N, M, L=20, batch_size=num_channels, device=device)\n",
+    "    A0, D0 = proposed_initialization_torch_batch(H_batch, theta_d_t, N, M, K, P_BS_t, device=device)\n",
+    "    \n",
     "    for epoch in range(num_epochs):\n",
     "        total_loss = 0.0\n",
-    "\n",
-    "        H_batch = generate_channel_torch_batch(N, M, L=20, batch_size=num_channels, device=device)\n",
-    "\n",
     "        for ch_idx in range(num_channels):\n",
     "            H_ch = H_batch[ch_idx]\n",
-    "            # snr_db = snr_max\n",
-    "            snr_db = np.random.randint(snr_min, snr_max + 1)\n",
-    "            \n",
-    "            Psi = compute_psi(snr_db)\n",
-    "            Psi = torch.tensor(Psi, dtype=torch.complex64, device=device)\n",
-    "\n",
-    "            P_BS = sigma_n2 * 10**(snr_db / 10)\n",
-    "            P_BS_t = torch.tensor(P_BS, dtype=torch.float32, device=device)\n",
-    "\n",
-    "            A0, D0 = proposed_initialization_torch(H_ch, theta_d_t, N, M, K, P_BS_t, device=device)\n",
-    "            A_final, D_final = model(H_ch, A0, D0, Psi, sigma_n2_t, P_BS_t)\n",
+    "            A0_ch = A0[ch_idx]\n",
+    "            D0_ch = D0[ch_idx]\n",
+    "            # A0, D0 = proposed_initialization_torch(H_ch, theta_d_t, N, M, K, P_BS_t, device=device)\n",
+    "            A_final, D_final = model(H_ch, A0_ch, D0_ch, Psi, sigma_n2_t, P_BS_t)\n",
     "\n",
     "            loss = upganet_loss(H_ch, A_final, D_final, Psi, sigma_n2_t, omega)\n",
     "\n",
@@ -178,7 +213,7 @@
     "            lambda_val = model.layers[0].lambda_.item()\n",
     "        mu_history.append(mu_mean)\n",
     "        lambda_history.append(lambda_val)\n",
-    "        scheduler.step()\n",
+    "        scheduler.step(avg_loss)  # Pass the metric for ReduceLROnPlateau\n",
     "\n",
     "        print(f\"Epoch [{epoch+1}/{num_epochs}] | Loss: {avg_loss:.6f} | μ={mu_mean:.6f}, λ={lambda_val:.6f}\")\n",
     "\n",
