new changes are added to optimize the dnn

--- a/training_models.ipynb
+++ b/training_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7cd70698",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gx/jn94vn6n4kx19gx4401mwj580000gn/T/ipykernel_31015/3581630800.py:28: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_3893321/467556693.py:27: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.detach().clone() or sourceTensor.detach().clone().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  P_BS_t = torch.tensor(P_BS, dtype=torch.float32, device=device)\n"
      ]
     },
@@ -112,7 +112,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training UPGANet (J=10)\n"
+      "Training UPGANet (J=10)\n",
+      "Epoch [1/30] | Loss: 55.829961 | μ=0.021512, λ=-0.009596\n",
+      "Epoch [2/30] | Loss: 56.522087 | μ=0.042546, λ=0.016392\n",
+      "Epoch [3/30] | Loss: 54.926397 | μ=0.070009, λ=0.025293\n"
      ]
     }
    ],
@@ -123,8 +126,7 @@
     "\n",
     "# ==== Config ====\n",
     "num_epochs = 30\n",
-    "num_channels = 1000\n",
-    "snr_min, snr_max = 0, 12\n",
+    "num_channels = 500\n",
     "\n",
     "from lib.dnn import UPGANet, upganet_loss\n",
     "from lib.support_functions_torch import (\n",
@@ -136,7 +138,7 @@
     "\n",
     "\n",
     "# snr_db = snr_max\n",
-    "snr_min, snr_max, snr_step = 0, 12, 2\n",
+    "snr_min, snr_max, snr_step = 12, 12, 2\n",
     "snr_range = torch.arange(snr_min, snr_max + snr_step, snr_step)\n",
     "\n",
     "\n",
@@ -165,10 +167,11 @@
     "\n",
     "\n",
     "    loss_history, mu_history, lambda_history = [], [], []\n",
-    "    H_batch = generate_channel_torch_batch(N, M, L=20, batch_size=num_channels, device=device)\n",
-    "    A0, D0, P_BS_used = proposed_initialization_torch_batch_multiSNR(H_batch, theta_d_t, N, M, K, P_BS_list, device=device)\n",
+    "\n",
     "    \n",
     "    for epoch in range(num_epochs):\n",
+    "        H_batch = generate_channel_torch_batch(N, M, L=20, batch_size=num_channels, device=device)\n",
+    "        A0, D0, P_BS_used = proposed_initialization_torch_batch_multiSNR(H_batch, theta_d_t, N, M, K, P_BS_list, device=device)\n",
     "        total_loss = 0.0\n",
     "        for ch_idx in range(num_channels):\n",
     "            H_ch = H_batch[ch_idx]\n",
@@ -186,6 +189,7 @@
     "\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
+    "            torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
     "            optimizer.step()\n",
     "\n",
     "            total_loss += loss.item()\n",
@@ -236,10 +240,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c748bf4",
+   "id": "bf41696c",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c748bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "EVALUATING UNTRAINED UPGANet (μ=-0.176042, λ=0.021704, J=1)\n",
+      "======================================================================\n",
+      "Device: cpu\n",
+      "\n",
+      "SNR =  0 dB → Avg R = 2.3815 bps/Hz\n",
+      "SNR =  2 dB → Avg R = 2.4429 bps/Hz\n",
+      "SNR =  4 dB → Avg R = 2.7596 bps/Hz\n",
+      "SNR =  6 dB → Avg R = 2.7351 bps/Hz\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 61\u001b[39m\n\u001b[32m     57\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m R_untrained_list\n\u001b[32m     60\u001b[39m \u001b[38;5;66;03m# Evaluate untrained (μ=λ=0.01)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m61\u001b[39m untrained_results = \u001b[43mevaluate_untrained_upganet\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     62\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmu_val\u001b[49m\u001b[43m=\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m0.176042\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlambda_val\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.021704\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     63\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnum_realizations\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msnr_range\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m13\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     64\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     66\u001b[39m \u001b[38;5;66;03m# ==== Plot comparison ====\u001b[39;00m\n\u001b[32m     67\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 47\u001b[39m, in \u001b[36mevaluate_untrained_upganet\u001b[39m\u001b[34m(mu_val, lambda_val, J, num_realizations, snr_range)\u001b[39m\n\u001b[32m     44\u001b[39m A0, D0 = proposed_initialization_torch(H_t, theta_d_t, N, M, K, P_BS_t, device=device)\n\u001b[32m     46\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m     A_final, D_final = \u001b[43muntrained_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mH_t\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mA0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mD0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPsi_t\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msigma_n2_t\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mP_BS_t\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     49\u001b[39m \u001b[38;5;66;03m# Compute achievable rate\u001b[39;00m\n\u001b[32m     50\u001b[39m R = compute_rate_torch(H_t, A_final, D_final, sigma_n2_t)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/OneDrive/PHD Thesis/mimo_jcas_system/venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1775\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1773\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1774\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1775\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/OneDrive/PHD Thesis/mimo_jcas_system/venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1786\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1781\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1782\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1783\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1784\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1785\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1786\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1788\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1789\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/OneDrive/PHD Thesis/mimo_jcas_system/lib/dnn.py:86\u001b[39m, in \u001b[36mUPGANet.forward\u001b[39m\u001b[34m(self, H, A0, D0, Psi, sigma_n2, P_BS)\u001b[39m\n\u001b[32m     84\u001b[39m A, D = A0, D0\n\u001b[32m     85\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.I_max):\n\u001b[32m---> \u001b[39m\u001b[32m86\u001b[39m     A, D = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlayers\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43mH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPsi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msigma_n2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mP_BS\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     87\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m A, D\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/OneDrive/PHD Thesis/mimo_jcas_system/venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1775\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1773\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1774\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1775\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/OneDrive/PHD Thesis/mimo_jcas_system/venv/lib/python3.12/site-packages/torch/nn/modules/module.py:1786\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1781\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1782\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1783\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1784\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1785\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1786\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1788\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1789\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/OneDrive/PHD Thesis/mimo_jcas_system/lib/dnn.py:55\u001b[39m, in \u001b[36mUPGANetLayer.forward\u001b[39m\u001b[34m(self, H, A, D, Psi, sigma_n2, P_BS)\u001b[39m\n\u001b[32m     52\u001b[39m \u001b[38;5;66;03m# Digital precoder update\u001b[39;00m\n\u001b[32m     53\u001b[39m \u001b[38;5;66;03m# DETACH gradient computations here too\u001b[39;00m\n\u001b[32m     54\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n\u001b[32m---> \u001b[39m\u001b[32m55\u001b[39m     grad_RD = \u001b[43mgradient_R_D_torch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msigma_n2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     56\u001b[39m     grad_tauD = gradient_tau_D_torch(A, D, Psi)\n\u001b[32m     58\u001b[39m \u001b[38;5;66;03m# Gradient ascent with learnable step size\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/OneDrive/PHD Thesis/mimo_jcas_system/lib/support_functions_torch.py:148\u001b[39m, in \u001b[36mgradient_R_D_torch\u001b[39m\u001b[34m(H, A, D, sigma_n2, eps, clip_value)\u001b[39m\n\u001b[32m    145\u001b[39m     term1 = (H_bar_k @ D) / denom1\n\u001b[32m    146\u001b[39m     term2 = (H_bar_k @ D_bar_k) / denom2\n\u001b[32m--> \u001b[39m\u001b[32m148\u001b[39m     grad_D += xi * (term1 - term2)\n\u001b[32m    150\u001b[39m \u001b[38;5;66;03m# Clip gradients to prevent explosion\u001b[39;00m\n\u001b[32m    151\u001b[39m grad_norm = torch.linalg.norm(grad_D, \u001b[38;5;28mord\u001b[39m=\u001b[33m'\u001b[39m\u001b[33mfro\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from lib.dnn import UPGANet\n",
+    "from lib.support_functions_torch import (\n",
+    "    compute_rate_torch,\n",
+    "    generate_channel_torch_batch,\n",
+    "    proposed_initialization_torch,\n",
+    "    compute_psi\n",
+    ")\n",
+    "\n",
+    "def evaluate_untrained_upganet(mu_val=0.01, lambda_val=0.01, J=1, num_realizations=100, snr_range=range(0, 13, 2)):\n",
+    "    \"\"\"\n",
+    "    Evaluate an untrained UPGANet model with fixed μ and λ values\n",
+    "    to compute the average achievable rate vs SNR.\n",
+    "    \"\"\"\n",
+    "    print(\"=\"*70)\n",
+    "    print(f\"EVALUATING UNTRAINED UPGANet (μ={mu_val}, λ={lambda_val}, J={J})\")\n",
+    "    print(\"=\"*70)\n",
+    "    print(f\"Device: {device}\\n\")\n",
+    "\n",
+    "    # Instantiate untrained model\n",
+    "    untrained_model = UPGANet(N, M, K, omega, I_max=I_max, J=J).to(device)\n",
+    "\n",
+    "    # Set μ and λ manually\n",
+    "    with torch.no_grad():\n",
+    "        for layer in untrained_model.layers:\n",
+    "            layer.mu.data.fill_(mu_val)\n",
+    "            layer.lambda_.data.fill_(lambda_val)\n",
+    "\n",
+    "    untrained_model.eval()\n",
+    "\n",
+    "    R_untrained_list = []\n",
+    "\n",
+    "    for snr_db in snr_range:\n",
+    "        R_sum = 0.0\n",
+    "        P_BS = sigma_n2 * 10**(snr_db / 10)\n",
+    "        P_BS_t = torch.tensor(P_BS, dtype=torch.float32, device=device)\n",
+    "        Psi_t = torch.tensor(compute_psi(snr_db), dtype=torch.cfloat, device=device)\n",
+    "        H_batch = generate_channel_torch_batch(N, M, L=20, batch_size=num_realizations, device=device)\n",
+    "\n",
+    "        for realization in range(num_realizations):\n",
+    "            H_t = H_batch[realization]\n",
+    "\n",
+    "            # Initialization (same as in training)\n",
+    "            A0, D0 = proposed_initialization_torch(H_t, theta_d_t, N, M, K, P_BS_t, device=device)\n",
+    "\n",
+    "            with torch.no_grad():\n",
+    "                A_final, D_final = untrained_model(H_t, A0, D0, Psi_t, sigma_n2_t, P_BS_t)\n",
+    "\n",
+    "            # Compute achievable rate\n",
+    "            R = compute_rate_torch(H_t, A_final, D_final, sigma_n2_t)\n",
+    "            R_sum += R.item()\n",
+    "\n",
+    "        R_avg = R_sum / num_realizations\n",
+    "        R_untrained_list.append(R_avg)\n",
+    "        print(f\"SNR = {snr_db:2d} dB → Avg R = {R_avg:.4f} bps/Hz\")\n",
+    "\n",
+    "    return R_untrained_list\n",
+    "\n",
+    "\n",
+    "# Evaluate untrained (μ=λ=0.01)\n",
+    "untrained_results = evaluate_untrained_upganet(\n",
+    "    mu_val=-0.176042, lambda_val=0.021704, J=1,\n",
+    "    num_realizations=100, snr_range=range(0, 13, 2)\n",
+    ")\n",
+    "\n",
+    "# ==== Plot comparison ====\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "snr_vals = list(range(0, 13, 2))\n",
+    "\n",
+    "plt.figure(figsize=(6,4))\n",
+    "plt.plot(snr_vals, untrained_results, 'o--', label='Untrained (μ=λ=0.01)')\n",
+    "# plt.plot(snr_vals, trained_results, 's-', label='Trained UPGANet')\n",
+    "plt.xlabel('SNR (dB)')\n",
+    "plt.ylabel('Average Achievable Rate (bps/Hz)')\n",
+    "plt.title('UPGANet Performance: Before vs After Training')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
